--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "daisyui": "^2.46.1",
     "next": "^13.1.1",
     "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.4"
   }
 }
