--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "openai-quickstart-node",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "daisyui": "^2.46.1",
-    "next": "^13.1.1",
-    "openai": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.2.4"
-  }
+    "name": "openai-quickstart-node",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@nextui-org/react": "^1.0.0-beta.12",
+        "@zeit/next-css": "^1.0.1",
+        "daisyui": "^2.46.1",
+        "next": "^13.1.1",
+        "openai": "^3.1.0",
+        "postcss-cli": "^10.1.0",
+        "postcss-preset-env": "^7.8.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.13",
+        "postcss": "^8.4.21",
+        "tailwindcss": "^3.2.4"
+    }
 }
