--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@nextui-org/react": "^1.0.0-beta.12",
         "@zeit/next-css": "^1.0.1",
         "daisyui": "^2.46.1",
+        "framer-motion": "^8.4.3",
         "next": "^13.1.1",
         "openai": "^3.1.0",
         "postcss-cli": "^10.1.0",
@@ -19,8 +20,11 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@types/node": "18.11.18",
+        "@types/react": "18.0.26",
         "autoprefixer": "^10.4.13",
         "postcss": "^8.4.21",
-        "tailwindcss": "^3.2.4"
+        "tailwindcss": "^3.2.4",
+        "typescript": "4.9.4"
     }
 }
