--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "daisyui": "^2.46.1",
         "framer-motion": "^8.4.3",
         "next": "^13.1.1",
+        "next-themes": "^0.2.1",
         "openai": "^3.1.0",
         "postcss-cli": "^10.1.0",
         "postcss-preset-env": "^7.8.3",
