--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@zeit/next-css": "^1.0.1",
         "daisyui": "^2.46.1",
         "framer-motion": "^8.4.3",
+        "google-auth-library": "^8.7.0",
         "next": "^13.1.1",
         "next-themes": "^0.2.1",
         "openai": "^3.1.0",
