--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
         "start": "next start"
     },
     "dependencies": {
+        "@chakra-ui/core": "^0.8.0",
         "@nextui-org/react": "^1.0.0-beta.12",
         "@zeit/next-css": "^1.0.1",
         "daisyui": "^2.46.1",
+        "express": "^4.18.2",
         "framer-motion": "^8.4.3",
         "google-auth-library": "^8.7.0",
+        "mongoose": "^6.8.4",
         "next": "^13.1.1",
         "next-themes": "^0.2.1",
         "openai": "^3.1.0",
+        "passport": "^0.6.0",
+        "passport-google-oauth20": "^2.0.0",
+        "passport-local": "^1.0.0",
         "postcss-cli": "^10.1.0",
-        "postcss-preset-env": "^7.8.3",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "postcss-preset-env": "^7.8.3"
     },
     "devDependencies": {
         "@types/node": "18.11.18",
